[gd_scene load_steps=3 format=2]

[ext_resource path="res://misc/line-text-64.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menus/Arcade/Scripts/Parts/Settings-Temp-Menu_Video.gd" type="Script" id=2]

[node name="Menu_Video_Settings" type="Node2D"]
script = ExtResource( 2 )

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_left = 40.0
margin_top = 270.0
margin_right = 1890.0
margin_bottom = 1045.0
border_color = Color( 1, 1, 1, 1 )
border_width = 3.0
editor_only = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 80.0
margin_top = 320.0
margin_right = 749.0
margin_bottom = 675.0
rect_pivot_offset = Vector2( 1960, -90 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1776.0
margin_bottom = 67.0

[node name="Label_CRT" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 562.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "CRT Effect     "

[node name="Label_CRT_On" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 566.0
margin_right = 640.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "On"

[node name="Label_CRT_Off" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 644.0
margin_right = 757.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Off"

[node name="Label_05" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 761.0
margin_right = 761.0
margin_bottom = 67.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="Label_02" type="Label" parent="VBoxContainer"]
margin_top = 71.0
margin_right = 1776.0
margin_bottom = 138.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )
text = "                                                "

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 1776.0
margin_bottom = 209.0

[node name="Label_Static" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 540.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Static Effect  "

[node name="Label_Static_On" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 544.0
margin_right = 618.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "on"

[node name="Label_Static_Off" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 622.0
margin_right = 735.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Off"

[node name="Label_04" type="Label" parent="VBoxContainer"]
margin_top = 213.0
margin_right = 1776.0
margin_bottom = 280.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 284.0
margin_right = 1776.0
margin_bottom = 351.0

[node name="Label_Juice" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_right = 538.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Juice Effect   "

[node name="Label_Juice_On" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 542.0
margin_right = 616.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "on"

[node name="Label_Juice_Off" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 620.0
margin_right = 733.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Off"

[node name="Label_05" type="Label" parent="VBoxContainer"]
margin_top = 355.0
margin_right = 1776.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer4" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 426.0
margin_right = 1776.0
margin_bottom = 493.0

[node name="Label_Static_Amount_Min" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_right = 619.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Static Min Amount:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 623.0
margin_top = 26.0
margin_right = 675.0
margin_bottom = 40.0
text = "             "

[node name="Label_Static_Count" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 679.0
margin_right = 716.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "8"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer4"]
margin_left = 720.0
margin_top = 26.0
margin_right = 772.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer4"]
margin_left = 776.0
margin_right = 1776.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 255.0
value = 5.0
rounded = true

[node name="HBoxContainer5" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 497.0
margin_right = 1776.0
margin_bottom = 564.0

[node name="Label_Static_Amount_Max" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_right = 642.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "Static Max Amount:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 646.0
margin_top = 26.0
margin_right = 698.0
margin_bottom = 40.0
text = "             "

[node name="Label_Static_Count" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 702.0
margin_right = 739.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "8"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer5"]
margin_left = 743.0
margin_top = 26.0
margin_right = 795.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer5"]
margin_left = 799.0
margin_right = 1776.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 255.0
value = 5.0
rounded = true

[node name="Label_03" type="Label" parent="VBoxContainer"]
margin_top = 568.0
margin_right = 1776.0
margin_bottom = 635.0
rect_pivot_offset = Vector2( 1960, -250 )
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer6" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 639.0
margin_right = 1776.0
margin_bottom = 706.0

[node name="Label_Juice_Amount" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_right = 486.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "juice  Amount:"

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 490.0
margin_top = 26.0
margin_right = 546.0
margin_bottom = 40.0
text = "              "

[node name="Label_juice_Count" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 550.0
margin_right = 588.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 1 )
text = "2"

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer6"]
margin_left = 592.0
margin_top = 26.0
margin_right = 644.0
margin_bottom = 40.0
text = "             "

[node name="HSlider" type="HSlider" parent="VBoxContainer/HBoxContainer6"]
margin_left = 648.0
margin_right = 1776.0
margin_bottom = 67.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.05

[connection signal="value_changed" from="VBoxContainer/HBoxContainer4/HSlider" to="." method="_on_HSlider_Static_min_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer5/HSlider" to="." method="_on_HSlider_Static_max_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer6/HSlider" to="." method="_on_HSlider_Juice_value_changed"]
